force-app/main/default/objects/Borrowing_Record__c/Borrowing_Record__c.object-meta.xml
<CustomObject>
  <fullName>Borrowing_Record__c</fullName>
  <label>Borrowing Record</label>
  <pluralLabel>Borrowing Records</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Borrowing Record Number</label>
    <displayFormat>BR-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>