force-app/main/default/objects/Borrowing_Record__c/fields/Borrower__c.field-meta.xml
<CustomField>
  <fullName>Borrower__c</fullName>
  <label>Borrower</label>
  <type>Lookup</type>
  <referenceTo>Library_Member__c</referenceTo>
  <relationshipLabel>Borrowing Records</relationshipLabel>
  <relationshipName>Borrowing_Records</relationshipName>
  <required>true</required>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>