force-app/main/default/objects/Borrowing_Record__c/fields/Checkout_Date__c.field-meta.xml
<CustomField>
  <fullName>Checkout_Date__c</fullName>
  <label>Checkout Date</label>
  <required>true</required>
  <type>DateTime</type>
</CustomField>