force-app/main/default/objects/Borrowing_Record__c/fields/Library_Item__c.field-meta.xml
<CustomField>
  <fullName>Library_Item__c</fullName>
  <label>Library Item</label>
  <type>MasterDetail</type>
  <referenceTo>Library_Item__c</referenceTo>
  <relationshipLabel>Borrowing Records</relationshipLabel>
  <relationshipName>Borrowing_Records</relationshipName>
  <required>true</required>
</CustomField>