force-app/main/default/objects/Borrowing_Record__c/fields/Return_Date__c.field-meta.xml
<CustomField>
  <fullName>Return_Date__c</fullName>
  <label>Return Date</label>
  <type>DateTime</type>
</CustomField>