force-app/main/default/objects/Borrowing_Record__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
          <value>
              <fullName>Active</fullName>
              <default>true</default>
              <label>Active</label>
          </value>
          <value>
              <fullName>Returned</fullName>
          </value>
          <value>
              <fullName>Overdue</fullName>
          </value>
      </valueSetDefinition>
  </valueSet>
</CustomField>