force-app/main/default/objects/Borrowing_Record__c/validationRules/Due_Date_After_Checkout.validationRule-meta.xml
<ValidationRule>
  <fullName>Due_Date_After_Checkout</fullName>
  <active>true</active>
  <errorConditionFormula
  >Due_Date__c &lt; Checkout_Date__c</errorConditionFormula>
  <errorMessage>Due date must be after the checkout date.</errorMessage>
  <description>Ensures due date is after checkout date</description>
</ValidationRule>