force-app/main/default/objects/Borrowing_Record__c/validationRules/Prevent_Checkout_If_Unavailable.validationRule-meta.xml
<ValidationRule>
    <!-- Prevent checkout of unavailable items -->
    <fullName>Prevent_Checkout_If_Unavailable</fullName>
    <active>true</active>
    <errorConditionFormula>
        AND(
            ISPICKVAL(Library_Item__r.Status__c, "Checked Out"),
            ISCHANGED(Status__c),
            ISPICKVAL(Status__c, "Active")
        )
    </errorConditionFormula>
    <errorMessage
  >This item is already checked out and cannot be borrowed.</errorMessage>
    <description
  >Prevents checking out items that are already checked out</description>
</ValidationRule>