force-app/main/default/objects/Borrowing_Record__c/validationRules/Return_Date_After_Checkout.validationRule-meta.xml
<ValidationRule>
  <fullName>Return_Date_After_Checkout</fullName>
  <active>true</active>
  <errorConditionFormula>
      AND(
          NOT(ISBLANK(Return_Date__c)),
          <!-- complained about using < as not being well-formed, hence &lt; -->
          Return_Date__c &lt; Checkout_Date__c
      )
  </errorConditionFormula>
  <errorMessage>Return date cannot be before the checkout date.</errorMessage>
  <description>Ensures return date is after checkout date</description>
</ValidationRule>